--- a/src/css/mods/light.css
+++ b/src/css/mods/light.css
@@ -42,7 +42,7 @@ textarea, .btn, body.using_mouse .btn:focus, body.using_mouse .checkbox_checkmar
     border-color: #212121;
 }
 
-.selected_folder, .selected_folder_bulk, .btn:hover, .option:hover, .header_btn, .header_btn label, .header_btn:hover, .header_btn:hover label, .help_viewer_message, .search_input, .er_msg, .er_msg div, .er_msg button, .using_keyboard .history_item:focus, .using_keyboard .history_item:focus span, .processing_msg {
+.selected_folder, .selected_folder_bulk, .btn:hover, .option:hover, .header_btn, .header_btn label, .header_btn:hover, .header_btn:hover label, .help_viewer_message, .search_input, .er_msg, .er_msg div, .er_msg button, .using_keyboard .history_item:focus, .using_keyboard .history_item:focus span, .processing_msg > div {
     color: white;
 }
 
@@ -188,7 +188,7 @@ textarea:focus, .btn:focus, .checkbox_checkmark_w:focus, .color_input_vizualizat
 }
 /*< history */
 
-.processing_msg {
+.processing_msg > div {
     background-color: #68c2e8;
 }
 
